add output to notebook

--- a/ahendel-text-mining.ipynb
+++ b/ahendel-text-mining.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Source: http://localhost:8888/?token=858b3d9f0fa67838d04a899b00e532c7c0b92f3a73ec6357\n",
+    "Source: https://archive.ics.uci.edu/ml/datasets/Drug+Review+Dataset+%28Drugs.com%29\n",
     "\n",
     "\n",
     "The dataset provides patient reviews on specific drugs along with related conditions and a 10 star patient rating reflecting overall patient satisfaction. The data was obtained by crawling online pharmaceutical review sites. The intention was to study \n",
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -370,6 +370,25 @@
       "Fitting vec-xgb\n",
       "Fitting vec-lr\n",
       "Fitting vec-mlp\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ahendel/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/multilayer_perceptron.py:562: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting vec-dt\n",
+      "Predicting: vec-xgb\n",
+      "Predicting: vec-lr\n",
+      "Predicting: vec-mlp\n",
+      "Predicting: vec-dt\n"
      ]
     }
    ],
@@ -394,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,11 +429,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics"
+    "pd.DataFrame\\\n",
+    "    .from_dict(metrics, orient='index')\\\n",
+    "    .to_csv('f1-score.csv', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(results)\\\n",
+    "    .to_csv('pred.csv', index=None)"
    ]
   },
   {
