add csv output for assignment requirement

--- a/ahendel-text-mining.ipynb
+++ b/ahendel-text-mining.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,6 +56,20 @@
     "raw_test = pd.read_csv('./drugsComTest_raw.tsv', sep='\\t')\n",
     "print(raw_train.shape)\n",
     "print(raw_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combine the to for .csv requirement in assignment\n",
+    "raw_train['cat'] = 'TRAIN'\n",
+    "raw_test['cat'] = 'TEST'\n",
+    "csv = pd.concat([raw_train, raw_test], axis=0)\n",
+    "csv\\\n",
+    "    .to_csv('text-mining-data.csv')"
    ]
   },
   {
