--- a/ahendel-text-mining.ipynb
+++ b/ahendel-text-mining.ipynb
@@ -4,32 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This report will analyze two approaches to text classification. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Source: https://archive.ics.uci.edu/ml/datasets/Drug+Review+Dataset+%28Drugs.com%29\n",
-    "\n",
-    "\n",
-    "The dataset provides patient reviews on specific drugs along with related conditions and a 10 star patient rating reflecting overall patient satisfaction. The data was obtained by crawling online pharmaceutical review sites. The intention was to study \n",
-    "(1) sentiment analysis of drug experience over multiple facets, i.e. sentiments learned on specific aspects such as effectiveness and side effects, \n",
-    "(2) the transferability of models among domains, i.e. conditions, and \n",
-    "(3) the transferability of models among different data sources (see 'Drug Review Dataset (Druglib.com)'). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The purpose is to compare the performance of text classificaiton approaches, using"
+    "Source: https://archive.ics.uci.edu/ml/datasets/Drug+Review+Dataset+%28Drugs.com%29"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(161297, 7)\n",
-      "(53766, 7)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load data\n",
     "raw_train = pd.read_csv('./drugsComTrain_raw.tsv', sep='\\t')\n",
@@ -60,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,27 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcbb257d9e8>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "raw_train['rating'].hist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,20 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting d2v-xgb\n",
-      "Fitting d2v-lr\n",
-      "Fitting d2v-mlp\n",
-      "Fitting d2v-dt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# train bag of models\n",
     "for model_name, model in models.items():\n",
@@ -225,20 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicting: d2v-xgb\n",
-      "Predicting: d2v-lr\n",
-      "Predicting: d2v-mlp\n",
-      "Predicting: d2v-dt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# infer w/ each model\n",
     "results = {'ACTUAL' : embed_test['outcome'].reset_index(drop=True)}\n",
@@ -249,60 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Performance Metrics for: d2v-xgb\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.72      0.79      0.75     27573\n",
-      "           1       0.76      0.67      0.71     26193\n",
-      "\n",
-      "   micro avg       0.74      0.74      0.74     53766\n",
-      "   macro avg       0.74      0.73      0.73     53766\n",
-      "weighted avg       0.74      0.74      0.73     53766\n",
-      "\n",
-      "-----------------\n",
-      "Performance Metrics for: d2v-lr\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.51      0.98      0.67     27573\n",
-      "           1       0.48      0.02      0.03     26193\n",
-      "\n",
-      "   micro avg       0.51      0.51      0.51     53766\n",
-      "   macro avg       0.49      0.50      0.35     53766\n",
-      "weighted avg       0.49      0.51      0.36     53766\n",
-      "\n",
-      "-----------------\n",
-      "Performance Metrics for: d2v-mlp\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.51      0.69      0.59     27573\n",
-      "           1       0.49      0.31      0.38     26193\n",
-      "\n",
-      "   micro avg       0.51      0.51      0.51     53766\n",
-      "   macro avg       0.50      0.50      0.49     53766\n",
-      "weighted avg       0.50      0.51      0.49     53766\n",
-      "\n",
-      "-----------------\n",
-      "Performance Metrics for: d2v-dt\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.80      0.80      0.80     27573\n",
-      "           1       0.79      0.79      0.79     26193\n",
-      "\n",
-      "   micro avg       0.80      0.80      0.80     53766\n",
-      "   macro avg       0.80      0.80      0.80     53766\n",
-      "weighted avg       0.80      0.80      0.80     53766\n",
-      "\n",
-      "-----------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import classification_report\n",
     "for model_name, model in models.items():\n",
@@ -320,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,38 +261,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting vec-xgb\n",
-      "Fitting vec-lr\n",
-      "Fitting vec-mlp\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ahendel/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/multilayer_perceptron.py:562: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
-      "  % self.max_iter, ConvergenceWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting vec-dt\n",
-      "Predicting: vec-xgb\n",
-      "Predicting: vec-lr\n",
-      "Predicting: vec-mlp\n",
-      "Predicting: vec-dt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "models = {\n",
     "    'vec-xgb' : XGBClassifier(max_depth=14, min_child_weight=0.1, gamma=1.5,nthread=-1),\n",
@@ -427,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
